--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <div class="logo">
                 <img src="images/assets/logo-navbar.png" alt="">
             </div>
@@ -20,12 +26,98 @@
                 <li>Why It's Different</li>
             </ul>
 
-            <div>
+            <div class="nav-btn">
                 <button class="btn">Get Early Access</button>
             </div>
         </nav>
+        <section id="banner">
+            <div class="banner-content">
+                <div class="banner-Fockus">
+                    <p>Early Access Now Open</p>
+                </div>
+                <h1>Structured Thinking, </h1>
+                <h2>Not Just Note-Taking.</h2>
+                <P class="banner-text">A private space to store notes, links, and learning summaries — designed to
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</P>
+                <div><button class="btn">Start Building Your Vault <img src="images/assets/ArrowRight.png"
+                            alt=""></button><button class="btn-2"> <img src="images/assets/ArrowRight.png" alt="">See
+                        How It
+                        Works</button></div>
+            </div>
+        </section>
     </header>
-    <main></main>
+    <main>
+
+        <section id="Features">
+            <div class="Features-continer">
+                <div class="seaction-heading">
+                    <h2>
+                        Notes Don't Fail, Structure Does.</h2>
+                    <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                </div>
+                <div class="Features-box">
+                    <div class="Features-card">
+                        <img src="images/assets/Vector.png" alt="">
+                        <h2>Scattered notes</h2>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="Features-card">
+                        <img src="images/assets/Bookmarks.png" alt="">
+                        <h2>Bookmark overload</h2>
+                        <p>Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                    <div class="Features-card">
+                        <img src="images/assets/Brain.png" alt="">
+                        <h2>No idea connections</h2>
+                        <p>Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                    <div class="Features-card">
+                        <img src="images/assets/Info.png" alt="">
+                        <h2>Forgetting what you learned</h2>
+                        <p>Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="Solution">
+            <div class="Solution-continer">
+                <div class="Solution-img">
+
+                    <img src="/images/assets/knowledge.png" alt="">
+                </div>
+                <div class="Solution-info">
+                    <div class="Solution-info-1">
+                        <p>The Solution</p>
+                        <h2>Your second brain,
+                            structured by design.</h2>
+                        <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
+                            every
+                            note, link, and summary becomes part of an interconnected web of understanding.</p>
+                    </div>
+
+
+                    <div class="Solution-info-2">
+                        <div><img src="images/assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div><img src="images/assets/CheckCircle.png" alt="">
+                            <p>Connect related concepts automatically as you write</p>
+                        </div>
+                        <div><img src="images/assets/CheckCircle.png" alt="">
+                            <p>Build lasting knowledge through reflection prompts</p>
+                        </div>
+                        <div><img src="images/assets/CheckCircle.png" alt="">
+                            <p>Find anything instantly with semantic search</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
 </body>
 
