--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <div class="Solution-continer">
                 <div class="Solution-img">
 
-                    <img src="/images/assets/knowledge.png" alt="">
+                    <img src="images/assets/knowledge.png" alt="">
                 </div>
                 <div class="Solution-info">
                     <div class="Solution-info-1">
-                        <p>The Solution</p>
+                        <p class="Solution-info-p">The Solution</p>
                         <h2>Your second brain,
                             structured by design.</h2>
                         <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
@@ -107,7 +107,7 @@
                         <div><img src="images/assets/CheckCircle.png" alt="">
                             <p>Build lasting knowledge through reflection prompts</p>
                         </div>
-                        <div><img src="images/assets/CheckCircle.png" alt="">
+                        <div><img src="./images/assets/CheckCircle.png" alt="">
                             <p>Find anything instantly with semantic search</p>
                         </div>
                     </div>
