Solution-info hader css add

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <p class="Solution-info-p">The Solution</p>
                         <h2>Your second brain,
                             structured by design.</h2>
-                        <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
+                        <p class="Solution-info-p-2">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
                             every
                             note, link, and summary becomes part of an interconnected web of understanding.</p>
                     </div>
