early-access html add

--- a/index.html
+++ b/index.html
@@ -117,6 +117,21 @@
             </div>
 
         </section>
+
+        <section id="early-access">
+            <div class="early-container">
+                <div>
+                    <h1>Ready to think more clearly?</h1>
+                    <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+                </div>
+                <div>
+                    <button>Get Early Access</button>
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 </body>
