footer add with css

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         <p class="Solution-info-p">The Solution</p>
                         <h2>Your second brain,
                             structured by design.</h2>
-                        <p class="Solution-info-p-2">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
+                        <p class="Solution-info-p-2">Personal Knowledge Vault isn't another note-taking app. z It's a
+                            thinking environment where
                             every
                             note, link, and summary becomes part of an interconnected web of understanding.</p>
                     </div>
@@ -120,12 +121,13 @@
 
         <section id="early-access">
             <div class="early-container">
-                <div>
+                <div class="early-header">
                     <h1>Ready to think more clearly?</h1>
-                    <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+                    <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no
+                        credit card required.</p>
                 </div>
-                <div>
-                    <button>Get Early Access</button>
+                <div class="early-fotter">
+                    <button class="btn">Get Early Access</button>
                     <p>Free during early access • No credit card needed</p>
                 </div>
 
@@ -133,7 +135,25 @@
 
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer">
+            <div class="footer-header">
+                <img src="images/assets/logo-footer.png" alt="">
+                <div class="Social">
+                    <p>Social Links</p>
+                    <div class="icons">
+                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
+                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
+                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-copyright">
+                <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
