--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section id="banner">
             <div class="banner-content">
                 <div class="banner-Fockus">
+                    <div class="dot"></div>
                     <p>Early Access Now Open</p>
                 </div>
                 <h1>Structured Thinking, </h1>
