--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
@@ -40,10 +41,16 @@
                 <h2>Not Just Note-Taking.</h2>
                 <P class="banner-text">A private space to store notes, links, and learning summaries — designed to
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</P>
-                <div><button class="btn">Start Building Your Vault <img src="images/assets/ArrowRight.png"
-                            alt=""></button><button class="btn-2"> <img src="images/assets/ArrowRight.png" alt="">See
-                        How It
-                        Works</button></div>
+                <div class="button">
+                    <button class="btn-flex">
+                        <p>Start Building Your Vault </p><img src="images/assets/ArrowRight.png" alt="">
+                    </button>
+                    <button class="btn-2"> <i class="fa-solid fa-play"></i>
+                        <p>See
+                            How It
+                            Works</p>
+                    </button>
+                </div>
             </div>
         </section>
     </header>
@@ -128,7 +135,9 @@
                         credit card required.</p>
                 </div>
                 <div class="early-fotter">
-                    <button class="btn">Get Early Access</button>
+                   <button class="btn-flex">
+                      Get Early Access <img src="images/assets/ArrowRight.png" alt="">
+                    </button>
                     <p>Free during early access • No credit card needed</p>
                 </div>
 
@@ -143,13 +152,13 @@
                 <div class="Social">
                     <p>Social Links</p>
                     <div class="icons">
-                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
-                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
-                        <a href=""><img src="images/assets/CheckCircle.png" alt=""></a>
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
+            <div class="border"></div>
             <div class="footer-copyright">
                 <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
             </div>
