hover add button and anchor

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
@@ -22,9 +22,9 @@
             </div>
 
             <ul class="menu">
-                <li>Features</li>
-                <li>How It Works</li>
-                <li>Why It's Different</li>
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
             </ul>
 
             <div class="nav-btn">
@@ -135,8 +135,8 @@
                         credit card required.</p>
                 </div>
                 <div class="early-fotter">
-                   <button class="btn-flex">
-                      Get Early Access <img src="images/assets/ArrowRight.png" alt="">
+                    <button class="btn-flex">
+                        Get Early Access <img src="images/assets/ArrowRight.png" alt="">
                     </button>
                     <p>Free during early access • No credit card needed</p>
                 </div>
